[gd_scene load_steps=19 format=2]

[ext_resource path="res://UI/kenvector_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Particles/StarFieldBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://SingleScenes/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://UI/itch.io.png" type="Texture" id=4]
[ext_resource path="res://UI/github.png" type="Texture" id=5]
[ext_resource path="res://UI/facebook.png" type="Texture" id=6]
[ext_resource path="res://UI/UITheme.tres" type="Theme" id=7]
[ext_resource path="res://Audio/click.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="Environment" id=2]
background_mode = 4
glow_enabled = true
glow_intensity = 0.5
glow_bloom = 0.06
glow_blend_mode = 0

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=5]
resource_name = "ShowAnim"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeInOut:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeInOut:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=9]
resource_name = "ShowAnim"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -285.0
margin_top = 48.0
margin_right = 285.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( 285, 34 )
custom_fonts/font = SubResource( 1 )
text = "Missile Dodge"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_top = 159.0
margin_right = 150.0
margin_bottom = 194.0
rect_pivot_offset = Vector2( 150, 17 )
theme = ExtResource( 7 )
align = 1
placeholder_text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PostProcessing" type="Node2D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="PostProcessing"]
environment = SubResource( 2 )

[node name="StarFieldBackground" parent="PostProcessing" instance=ExtResource( 2 )]

[node name="Play" type="Button" parent="."]
margin_left = 140.0
margin_top = 270.0
margin_right = 390.0
margin_bottom = 305.0
rect_pivot_offset = Vector2( 125, 19 )
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.0392157, 0, 0.12549, 1 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = 80.0
margin_right = 125.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 125, 19 )
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.0392157, 0, 0.12549, 1 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 70.5
margin_right = 320.5
margin_bottom = 35.0
rect_pivot_offset = Vector2( 125, 19 )
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.0392157, 0, 0.12549, 1 )
text = "HELP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MadeBy" type="Label" parent="."]
margin_left = 23.0
margin_top = 503.0
margin_right = 308.0
margin_bottom = 524.0
custom_fonts/font = SubResource( 3 )
text = "A Game By Arnav Ghatti"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itchio" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 165.0
margin_top = 170.0
margin_right = 305.0
margin_bottom = 304.0
rect_scale = Vector2( 0.35, 0.35 )
rect_pivot_offset = Vector2( 70, 67 )
icon = ExtResource( 4 )
flat = true

[node name="facebook" type="Button" parent="."]
margin_left = 705.5
margin_top = 440.0
margin_right = 845.5
margin_bottom = 574.0
rect_scale = Vector2( 0.35, 0.35 )
rect_pivot_offset = Vector2( 70, 67 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="github" type="Button" parent="."]
margin_left = 785.5
margin_top = 440.0
margin_right = 925.5
margin_bottom = 574.0
rect_scale = Vector2( 0.35, 0.35 )
rect_pivot_offset = Vector2( 70, 67 )
mouse_default_cursor_shape = 2
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameWarning" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -100.0
margin_right = 175.0
margin_bottom = 100.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 175, 100 )
color = Color( 0, 0, 0, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="Label" parent="NameWarning"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -70.0
margin_right = 175.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 4 )
text = "ERROR:
Please Enter
Your Name"
align = 1
valign = 1

[node name="OK" type="Button" parent="NameWarning"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.5
margin_top = -47.0
margin_right = 55.5
margin_bottom = -12.0
theme = ExtResource( 7 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowAnim" type="AnimationPlayer" parent="NameWarning"]
anims/ShowAnim = SubResource( 5 )

[node name="Fade" type="Node2D" parent="."]
z_index = 10

[node name="FadeInOut" type="ColorRect" parent="Fade"]
margin_right = 921.0
margin_bottom = 540.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeAnim" type="AnimationPlayer" parent="Fade"]
anims/FadeIn = SubResource( 6 )
anims/FadeOut = SubResource( 7 )

[node name="HelpStuff" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 460, 270 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="HelpStuff"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.862745 )

[node name="Guidelines" type="Label" parent="HelpStuff"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 8 )
text = "The main objectiove of the game is to
survive 7 waves of deadly missiles.
Once you have survived 7 waves, you
will have beaten the game.
The player will look and go towards
the mouse.
You will have 3 lives. After losing 1 life,
You will gain +10 speed.

I hope you liked the game. You can contact
me on Facebook, Github or Itch.io.
Thank you for playing my game"
align = 1
valign = 1

[node name="ShowAnim" type="AnimationPlayer" parent="HelpStuff"]
anims/ShowAnim = SubResource( 9 )

[node name="Back" type="Button" parent="HelpStuff"]
margin_left = 5.0
margin_top = 5.0
margin_right = 85.0
margin_bottom = 34.0
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 10 )
text = "Back"

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="itchio" to="." method="_on_itchio_pressed"]
[connection signal="pressed" from="facebook" to="." method="_on_facebook_pressed"]
[connection signal="pressed" from="github" to="." method="_on_github_pressed"]
[connection signal="pressed" from="NameWarning/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="HelpStuff/Back" to="." method="_on_Back_pressed"]
